--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Curtis McLennan</h1>
-						<p>Ph.D. Student, University of Kansas, Department of Physics and Astronomy, Prohira Group </ br>
+						<p>Ph.D. Student, University of Kansas, Department of Physics and Astronomy, Prohira Group <br>
 Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -29,17 +29,17 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Curtis McLennan</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About me</a></li>
-							<li><a href="generic.html">Research</a></li>
-							<li><a href="elements.html">Publications</a></li>
-							<li><a href="elements.html">Contact Me</a></li>
-							<li><a href="elements.html">CV</a></li>
+							<li><a href="Construction.html">Research</a></li>
+							<li><a href="Construction.html">Publications</a></li>
+							<li><a href="Construction.html">Contact Me</a></li>
+							<li><a href="Construction.html">CV</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
