Making Construction page nicer

--- a/Construction.html
+++ b/Construction.html
@@ -25,11 +25,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">About me</a></li>
-							<li><a href="Construction.html">Research</a></li>
-							<li><a href="Construction.html">Publications</a></li>
-							<li><a href="Construction.html">Contact Me</a></li>
-							<li><a href="Construction.html">CV</a></li>
+							<li><a href="index.html">About me</a></li>
+							<li class="active"><a href="Construction.html">Working on it</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
