--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
 								<!-- Text stuff -->
-								<p> My research focuses on a pathfinder experiment called the Radar Echo Telescope. This is a novel methodology to detecting the highest energy neutrinos, using an in ice radar technique. Neutrinos play a key role in understanding certain astrophysical processes and are unique in being an observed particle with a variety of unknown properties. </p>
+								<p> My research focuses on a pathfinder experiment called the Radar Echo Telescope. This is a novel methodology to detecting the highest energy neutrinos, using an in ice radar technique. Neutrinos play a key role in understanding certain astrophysical processes and are unique in being an observed particle with a variety of unknown properties. I hold a degrees in Physics and Applied Mathematics from Wheaton College (IL).</p>
 							</article>
 
 						</div>
