--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 					<div id="main">
 						<!-- Featured Post -->
 							<article class="post featured">
-								<img style="width: 300px; border-radius: 50%;" src="Portrait.jpg">
+								<img style="width: 300px; border-radius: 50%;" src="images/Portrait.jpg">
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
