--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Curtis McLennan</h1>
-						<p>Ph.D. Student, University of Kansas, Department of Physics and Astronomy, Prohira Group <br>
+						<p>Physics Ph.D. Student, University of Kansas, Prohira Group <br>
 Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
