Adding some stuff, trying changing icons

--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 							<li><a href="Construction.html">CV</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/curtis-mclennan/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.researchgate.net/profile/Curtis-Mclennan" class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
 						</ul>
 					</nav>
 
@@ -65,7 +63,7 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Curtis McLennan</li><li>Background Image: <a href="https://esahubble.org/images/heic0601a/">ESA/NASA</a></li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Curtis McLennan</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
