--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 							<article class="post featured">
 								<img style="width: 300px; border-radius: 50%;" src="images/Portrait.jpg">
 								<!-- Text stuff -->
-								<p> My research focuses on a pathfinder experiment called the Radar Echo Telescope. This is a novel methodology to detecting the highest energy neutrinos, using an in ice radar technique. Neutrinos play a key role in understanding certain astrophysical processes and are unique in being an observed particle with a variety of unknown properties. I hold a degrees in Physics and Applied Mathematics from Wheaton College (IL) and am a 2023-2027 Madison and Lila Self Graduate Fellow.</p>
+								<p> My research focuses on a pathfinder experiment called the Radar Echo Telescope. 
+									This is a novel methodology to detecting the highest energy neutrinos, using an in ice radar technique. 
+									Neutrinos play a key role in understanding certain astrophysical processes and are unique in being an observed particle with a variety of unknown properties. 
+									I hold a degrees in Physics and Applied Mathematics from Wheaton College (IL) and am a 2023-2027 Madison and Lila Self Graduate Fellow.</p>
 							</article>
 
 						</div>
