More tweaks on main page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About me</a></li>
-							<li><a href="Construction.html">Research</a></li>
+							<li><a href="Research.html">Research</a></li>
 							<li><a href="Construction.html">Publications</a></li>
 							<li><a href="Construction.html">Contact Me</a></li>
 							<li><a href="Construction.html">CV</a></li>
@@ -62,6 +62,8 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 						</div>
 				<!-- Footer -->
 					<footer id="footer">
+						<h3>Email:</h3>
+						<p><a href="curtis.mclennan@ku.edu">curtis.mclennan@ku.edu</a></p>
 											</footer>
 
 				<!-- Copyright -->
