--- a/Construction.html
+++ b/Construction.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">About me</a></li>
-							<li class="active"><a href="Research.html">Research</a></li>
+							<li><a href="Research.html">Research</a></li>
 							<li class="active"><a href="Construction.html">Working on it</a></li>
 						</ul>
 						<ul class="icons">
