Fixing Email Footer

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 						</div>
 				<!-- Footer -->
 					<footer id="footer">
+						<section>
 						<h3>Email:</h3>
-						<p><a href="curtis.mclennan@ku.edu">curtis.mclennan@ku.edu</a></p>
+						<p><a href="#">curtis.mclennan@ku.edu</a></p>
+					</section>
 											</footer>
 
 				<!-- Copyright -->
