Attempt3 Fixing Research Page

--- a/Research.html
+++ b/Research.html
@@ -44,10 +44,12 @@
 						<!-- Post -->
 							<section class="post featured">
 								<header class="major">
-									
+									<h1> My Research</h1>
+								</header>
 									<p> I work with the <a href="https://www.radarechotelescope.org/">Radar Echo Telescope</a> to detect Ultra High Energy neutrinos. We are currently finishing a deployment season
 										and exciting work lies ahead! </p>
-								</header>
+							</section>
+					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
