Making Publication Link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 						<ul class="links">
 							<li class="active"><a href="index.html">About me</a></li>
 							<li><a href="Research.html">Research</a></li>
-							<li><a href="Construction.html">Publications</a></li>
+							<li><a href="Publications.html">Publications</a></li>
 							<li><a href="Construction.html">Contact Me</a></li>
 							<li><a href="Construction.html">CV</a></li>
 						</ul>
