--- a/Research.html
+++ b/Research.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">About me</a></li>
 								<li class="active"><a href="Research.html">Research</a></li>
-								<li><a href="Construction.html">Publications</a></li>
+								<li><a href="Publications.html">Publications</a></li>
 								<li><a href="Construction.html">Contact Me</a></li>
 								<li><a href="Construction.html">CV</a></li>
 							</ul>
