--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 							<article class="post featured">
 								<img style="width: 300px; border-radius: 50%;" src="images/Portrait.jpg">
 								<!-- Text stuff -->
-								<p> My research focuses on a pathfinder experiment called the Radar Echo Telescope. 
-									This is a novel methodology to detecting the highest energy neutrinos, using an in ice radar technique. 
-									Neutrinos play a key role in understanding certain astrophysical processes and are unique in being an observed particle with a variety of unknown properties. 
-									I hold a degrees in Physics and Applied Mathematics from Wheaton College (IL) and am a 2023-2027 Madison and Lila Self Graduate Fellow.</p>
+								<p> I am a second year Ph.D. student at University of Kasnas in the Department of Physics and astronomy. My research focuses on a pathfinder experiment called the Radar Echo Telescope. 
+									I moved to Lawrence after completing my undergraduate studies at Wheaton college with degrees in Physics and Applied Mathematics in 2024. 
+									I am 2023-2027 Madison and Lila Self Graduate Fellow.</p>
 							</article>
 
 						</div>
