Contact Me page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 							<li class="active"><a href="index.html">About me</a></li>
 							<li><a href="Research.html">Research</a></li>
 							<li><a href="Publications.html">Publications</a></li>
-							<li><a href="Construction.html">Contact Me</a></li>
+							<li><a href="Contact Me.html">Contact Me</a></li>
 							<li><a href="Construction.html">CV</a></li>
 						</ul>
 						<ul class="icons">
@@ -62,10 +62,10 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 						</div>
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 						<h3>Email:</h3>
 						<p><a href="#">curtis.mclennan@ku.edu</a></p>
-					</section>
+					</section> -->
 											</footer>
 
 				<!-- Copyright -->
