--- a/Research.html
+++ b/Research.html
@@ -28,7 +28,7 @@
 							<li><a href="index.html">About me</a></li>
 								<li class="active"><a href="Research.html">Research</a></li>
 								<li><a href="Publications.html">Publications</a></li>
-								<li><a href="Construction.html">Contact Me</a></li>
+								<li><a href="Contact Me.html">Contact Me</a></li>
 								<li><a href="Construction.html">CV</a></li>
 							</ul>
 						<ul class="icons">
