--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Searching for Ultra High Energy Neutrinos using the Radar Echo Telescope</p>
 								<img style="width: 300px; border-radius: 50%;" src="images/Portrait.jpg">
 								<p> <br></p>
 								<!-- Text stuff -->
-								<p> I am a second year Ph.D. student at University of Kasnas in the Department of Physics and astronomy. My research focuses on a pathfinder experiment called the Radar Echo Telescope. 
+								<p> I am a second year Ph.D. student at University of Kansas in the Department of Physics and astronomy. My research focuses on a pathfinder experiment called the Radar Echo Telescope. 
 									I moved to Lawrence after completing my undergraduate studies at Wheaton college with degrees in Physics and Applied Mathematics in 2024. 
 									I am 2023-2027 Madison and Lila Self Graduate Fellow.</p>
 							</article>
