Changing font sizes again

--- a/Publications.html
+++ b/Publications.html
@@ -45,7 +45,7 @@
 								<header class="major">
 									<p>All my publications can be found here: <a href="https://inspirehep.net/literature?sort=mostrecent&size=25&page=1&q=fin%20a%20Curtis%20McLennan">Publications</a>
 								</header>
-							<section class="posts" style="font-size: small; ">
+							<section class="posts" style="font-size: medium; ">
 								<article>
 									<header class="major">
 										<h3>Probing the Firn Refractive Index Profile and Borehole Closure Using Antenna Response</h3>
