Just making a couple changes to wording

--- a/Publications.html
+++ b/Publications.html
@@ -56,13 +56,13 @@
 									<p>
 										My most recent project was using a new measurement method for determining certain ice properties. Many experiments trying to detect ultra-high energy neutrinos
 										take place in polar enviroments. This is because ice is extremely dense, there are huge volumes of it on Earth, and is largely trasnparent to radio waves. 
-										So ice is a nearly ideal medium for these experiments to try to detect neutrinos in.</p>
+										So ice is a nearly ideal medium for these experiments trying to detect nuetrinos.</p>
 										<p>However, in order to accomplish the big ticket science goals of radio neutrino detectors, we need to understand all the properties of the ice they are in.
-										In particular these experiments are generally located in something called firn. Firn is what we call the intermedaite state between ice and snow.
-										My paper shows that we can measure one of the more important of properties of firn (the refractive index) using equipment that many of these experiments have lying around.
+										In particular these experiments are generally located in something called firn. Firn is what we call the intermedaite state between snow and ice.
+										My paper shows that we can measure one of the more important of properties of firn (the refractive index) using equipment that is common for many of these experiements.
 										By taking a measurement of one property of an antenna at a bunch of depths in the firn we can measure the refractive index at each depth. 
 										</p>
-										<p>The other big conclusion from this paper is that we can measure how much these boreholes close over time using the same measurment technique. The holes we drill and lower antennas down to detect neutrinos close over time naturally. However,
+										<p> Additionally. we can measure how much these boreholes close over time using the same measurment technique. The holes we drill and lower antennas down to detect neutrinos close over time naturally. However,
 										this will crush the antennas and electronics of the experiment, something we obviously do not want. My paper shows we can also measure how fast these holes close over time using this same method.
 										<br>The full paper can be found <a href="https://arxiv.org/abs/2504.03862">here</a>.
 										
