Updating a couple things

--- a/Research.html
+++ b/Research.html
@@ -47,7 +47,7 @@
 										detect Ultra High Energy neutrinos (UHEN). RET is an in ice radar system which aims to detect the in ice 
 										cascade from Cosmic Rays or UHEN. Neutrinos play a key role in understanding certain astrophysical processes 
 										and are unique in being an observed particle with a variety of unknown properties.
-										We are currently finishing this seasons deployment season and 
+										We are currently finishing this seasons deployment and 
 										exciting work lies ahead!</p> 
 								</header>
 
