Updating Article link

--- a/Publications.html
+++ b/Publications.html
@@ -62,7 +62,7 @@
 										My paper shows that we can measure one of the more important of properties of firn (the refractive index) using equipment that is common for many of these experiments.
 										By taking a measurement of one property of an antenna at a bunch of depths in the firn we can measure the refractive index at each depth. 
 										</p>
-										<br>The full paper can be found <a href="https://arxiv.org/abs/2504.03862">here</a>.
+										<br>The full paper can be found <a href="https://doi.org/10.1017/jog.2026.10133">here</a>.
 										
 									</p>
 								</article>
